<resources>
    <string name="app_name">Do Reminder</string>
    <string name="march_31_2020">March 31, 2020</string>
    <string name="today_task">Today Task</string>
    <string name="add_new_task">ADD NEW TASK</string>
    <string name="create_new_task">Create \nNew Task</string>
    <string name="task_title">Task Title</string>
    <string name="create_task">CREATE TASK</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="sat_31_march_2001">Sat, 31 March 2001</string>
    <string name="select_the_date">Select The Date</string>
    <string name="select_the_time">Select The Time</string>
    <string name="time">Time</string>
    <string name="send_notification">Send Notification</string>
    <string name="you_don_t_have_any_task_for_today">You Don\'t \nHave Any \nTask For \nToday :)</string>
    <string name="note">Note</string>
    <string name="add_some_notes_here">Add Some Notes Here (Optional)</string>
    <string name="back_logo">Back Logo</string>
    <string name="calendar_logo">Calendar Logo</string>
    <string name="clock_logo">Clock Logo</string>
    <string name="upcoming_task">Upcoming Task</string>
    <string name="edit_task">Edit Task</string>
    <string name="save">Save</string>
    <string name="mark_as_finished">Mark As Finished</string>
    <string name="show_more">Show More</string>
    <string name="all_task">All Task</string>
    <string name="dashboard">Dashboard</string>
    <string name="you_have_3_task_today">You Have 3 Task Today</string>
    <string name="today">Today</string>
    <string name="completed_task">Completed Task</string>
    <string name="empty">-</string>
    <string name="check_image">Check Image</string>
    <string name="you_don_t_nhave_any_ntask">You Don\'t \nHave Any \nTask :)</string>
    <string name="you_don_t_nany_ncompleted_ntask">You Don\'t\nAny\nCompleted\nTask :(</string>
    <string name="are_you_sure_to_delete_all_completed_task">This will delete all tasks that you have saved and cannot be returned.</string>
    <string name="delete_all_task">Delete All Task?</string>
    <string name="yes">Delete</string>
    <string name="no">Cancel</string>
    <string name="settings">Settings</string>
    <string name="task_notification">Task Notification</string>
    <string name="daily_notification">Daily Notification</string>
    <string name="notification">Notification</string>
    <string name="builder_app" translatable="false">Builder App</string>
    <string name="daily_notification_message">Hi! Ready to plan your day? Click to open Do Reminder</string>
    <string name="past">Past</string>
    <string name="upcoming">Upcoming</string>
    <string name="no_task">No Task</string>
    <string name="no_task_nwas_passed">No Task \nWas Passed</string>
    <string name="no_task_nhas_been_nmissed">No Task \nHas Been \nMissed</string>
    <string name="no_task_nfor_today">No Task \nFor Today</string>
    <string name="no_task_nwill_come">No Task \nWill Come</string>
    <string name="delete_icon" translatable="false">Delete Icon</string>
    <string name="no_title_error_msg">Error: Please Enter A Title</string>
    <string name="no_date_error_msg">Error: Please Add Date</string>
    <string name="no_time_error_msg">Error: Please Add Time</string>
    <string name="delete_completed_task">Delete Completed Task?</string>
    <string name="delete_this_task">Delete This Task?</string>
    <string name="this_will_delete_your_task_forever">This will delete your task and cannot be returned.</string>
    <string name="task_deleted">Task Deleted.</string>
</resources>
