<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.AllTaskActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="32dp">

        <ImageView
            android:id="@+id/btn_back_all_task"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/back_logo"
            android:src="@drawable/ic_arrow_back_black_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/all_img_delete"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="24dp"
            android:contentDescription="@string/delete_icon"
            android:src="@drawable/ic_delete_black_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/new_task_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/p_semibold"
            android:text="@string/all_task"
            android:textColor="#000"
            android:textSize="32sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_back_all_task" />

        <!--        Past Activity-->
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/p_semibold"
            android:text="@string/past"
            android:textColor="#000"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_task_tv" />

        <LinearLayout
            android:id="@+id/all_linear_layout_past"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <TextView
                android:id="@+id/all_no_task_past"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/p_semibold"
                android:text="@string/no_task_nhas_been_nmissed"
                android:textColor="#1C000000"
                android:textSize="52sp"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/all_task_recycler_view_passed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:scrollbars="vertical"
                android:visibility="visible"
                tools:listitem="@layout/task_card" />

        </LinearLayout>


        <!--        Today Activity-->
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/p_semibold"
            android:text="@string/today"
            android:textColor="#000"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/all_linear_layout_past" />

        <LinearLayout
            android:id="@+id/all_linear_layout_today"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/all_task_recycler_view_today"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:scrollbars="vertical"
                android:visibility="invisible"
                tools:listitem="@layout/task_card" />

            <TextView
                android:id="@+id/all_no_task_today"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/p_semibold"
                android:text="@string/no_task_nfor_today"
                android:textColor="#1C000000"
                android:textSize="52sp"
                android:visibility="visible" />

        </LinearLayout>


        <!--        Upcoming Activity-->
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/p_semibold"
            android:text="@string/upcoming"
            android:textColor="#000"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/all_linear_layout_today" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/all_task_recycler_view_upcoming"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:scrollbars="vertical"
                android:visibility="invisible"
                tools:listitem="@layout/task_card" />

            <TextView
                android:id="@+id/all_no_task_upcoming"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/p_semibold"
                android:text="@string/no_task_nwill_come"
                android:textColor="#1C000000"
                android:textSize="52sp"
                android:visibility="visible" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>