<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/today_date_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/p_light"
        android:text="@string/march_31_2020"
        android:textSize="16sp"
        android:textColor="#000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/today_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/p_semibold"
        android:text="@string/today_task"
        android:textColor="#000"
        android:textSize="32sp"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/today_date_tv" />

    <!-- Add RecyclerView Here -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/main_recycler_view"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="4dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        tools:listitem="@layout/task_card"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/today_task" />

    <TextView
        android:id="@+id/main_no_task"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/p_semibold"
        android:text="@string/you_don_t_have_any_task_for_today"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textColor="#1C000000"
        android:textSize="52sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_new_task"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/today_task" />

    <Button
        android:id="@+id/btn_new_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_new_task"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/p_semibold"
        android:background="@drawable/bg_button"
        android:textColor="#FFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>