<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_container"
        app:cardCornerRadius="0dp"
        android:layout_marginBottom="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:padding="12dp"
            android:weightSum="10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_weight="9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/card_title_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:fontFamily="@font/p_medium"
                    android:text="@string/title"
                    android:textColor="#000"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/card_date_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/p_light"
                    android:text="@string/date"
                    android:textColor="#000"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/card_time_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/p_light"
                    android:text="@string/time"
                    android:textColor="#000"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_margin="4dp"
                    android:layout_gravity="center"
                    android:id="@+id/card_btn_done"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:src="@drawable/done_logo" />

                <ImageView
                    android:layout_margin="4dp"
                    android:layout_gravity="center"
                    android:id="@+id/card_btn_edit"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:src="@drawable/edit_logo" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>